Segunda seccion finalizada

--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,4 @@
 @import './components/header.css';
 @import './components/editor.css';
 @import './components/quote.css';
+@import './components/image.css';
