--- a/css/base/global.css
+++ b/css/base/global.css
@@ -84,3 +84,22 @@
 .circle--black {
   background-color: var(--color--black);;
 }
+
+/* Buttons container */
+.buttons__container {
+  display: flex;
+  align-items: flex-end;
+}
+.buttons__container > button {
+  margin-right: 8px;
+}
+
+/* Images container */
+.images__container {
+  display: inline-flex;
+  align-items: flex-end;
+  margin-bottom: 16px;
+}
+.images__container > div {
+  margin-right: 32px;
+}
