--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -15,51 +15,36 @@
   font-weight: 600;
 }
 
-.example1 > h1 {
+/* Headings */
+.headings__container > .h1 {
   font-weight: 600;
   font-size: 32px;
   margin-bottom: 16px;
 }
-.example1 > h2 {
+.headings__container > .h2 {
   font-weight: 600;
   font-size: 28px;
   margin-bottom: 16px;
 }
-.example1 > h3 {
+.headings__container > .h3 {
   font-weight: 600;
   font-size: 24px;
   margin-bottom: 16px;
 }
-.example1 > h4 {
+.headings__container > .h4 {
   font-weight: 600;
   font-size: 20px;
   margin-bottom: 16px;
 }
-.example1 > h5 {
+.headings__container > .h5 {
   font-weight: 600;
   font-size: 16px;
   margin-bottom: 16px;
 }
-.example1 > h6 {
+.headings__container > .h6 {
   font-weight: 600;
   font-size: 12px;
   margin-bottom: 16px;
-}
-
-.code--blue {
-  color: #277EDD;
-}
-.code--red {
-  color: #D42F3C;
-}
-.code--orange {
-  color: #D46B08;
-}
-.code--gray {
-  color: #595959;
-}
-.code--green {
-  color: #61a471;
 }
 
 .paragraph__p {
